# big-slpp

./: .gitignore  pyproject.toml  setup.cfg
cmd/: coverage.sh
lib/big_slpp/: utils.py
src/big_slpp/: main.py
tests/: test_main.py  test_utils.py
tests/data/: Carbonite.lua  Carbonite_sorted.lua  Details.lua  Details_sorted.lua  TellMeWhen.lua  TellMeWhen_sorted.lua  _NPCScan.lua  _NPCScan_sorted.lua  table_list.lua  table_list_sorted.lua
